--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "happy-dom": "^15.2.0",
     "jsdom": "^25.0.1",
     "playwright": "^1.49.1",
-    "vite": "^6.0.7",
+    "vite": "5.4.11",
     "vitest": "^1.3.1"
   }
 }
